<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFF4F4F4"
    tools:context="ui.fragments.LoginFragment.LoginFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- right elispse-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/elisipe_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!-- left elispse-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/elisipe_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!-- top elispse-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/elisipe_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!-- arrow back -->
            <include
                android:id="@+id/arrow_back"
                layout="@layout/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toTopOf="parent" />
            <!-- tv login-->
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/arrow_back" />
            <!-- tv email-->
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_login" />
            <!-- edt email-->
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/login_edited_text_style"
                android:text="kminchelle"
                android:imeOptions="flagNavigateNext"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_25ssp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_style"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />
            <!-- tv password-->
            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/edt_email" />
            <!-- edt password-->

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/login_edited_text_style"
                android:imeOptions="flagNavigateNext"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_25ssp"
                android:paddingBottom="@dimen/_12sdp"
                android:singleLine="true"
                android:text="0lelplR"
                android:textCursorDrawable="@drawable/cursor_style"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_password" />

            <ImageView
                android:id="@+id/show_password"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/fingerprintt"
                app:layout_constraintBottom_toBottomOf="@id/edt_password"
                app:layout_constraintEnd_toEndOf="@+id/edt_password"
                app:layout_constraintTop_toTopOf="@+id/edt_password" />

            <ImageView
                android:id="@+id/hide_password"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/view"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/edt_password"
                app:layout_constraintEnd_toEndOf="@+id/edt_password"
                app:layout_constraintTop_toTopOf="@+id/edt_password" />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/sofiapro"
                android:text="@string/forgot_password"
                android:textColor="@color/color_orange"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />
            <!-- Login Button -->

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btn_login"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/login_button_style"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_forget_password"
                app:spinning_bar_color="@color/white" />

            <!-- sign up -->
            <LinearLayout
                android:id="@+id/linear_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/btn_login">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/color_orange" />
            </LinearLayout>

            <!--  sign in with -->
            <LinearLayout
                android:id="@+id/linear_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/linear_signup">

                <View
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/g_gray_color_t" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/myfont"
                    android:text="@string/sign_in_with"
                    android:textAlignment="center" />

                <View
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/g_gray_color_t" />
            </LinearLayout>

                <!-- sign in with face and google -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/linear_sign_in">

                <!-- sign in with facebook-->
                <LinearLayout
                    android:id="@+id/btn_facebook_sign_in"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:background="@drawable/sign_in_buttons_style"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_15sdp">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:src="@drawable/facebook_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myfont"
                        android:text="@string/facebook"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>

                <!-- sign in with google-->
                <LinearLayout
                    android:id="@+id/btn_login_with_google"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:background="@drawable/sign_in_buttons_style"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_15sdp">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:src="@drawable/google_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myfont"
                        android:text="@string/google"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>